--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h1 id="hora">14&nbsp</h1>
                 <h2>:</h2>
                 <h1 id="minutos"></h1>
-                <h1>:</h1>
-                <h1 id="segundos">:</h1>
+                <!-- <h1>:</h1>
+                <h1 id="segundos">:</h1> -->
             </div>
             <div class="calendario">
                 <h1 id="fechaDia">Lunes</h1>
