--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="climaPronostico">
                 <!-- <h1 id="clima"></h1> -->
                 <h1 id="climaCelsius"></h1>
+                <h1>Temp</h1>
                 <!-- <img id="clima" src="" alt=""> -->
             </div>
         </div>
